force-app/main/default/objects/numm__Soldes__c/numm__Soldes__c.object-meta.xml
<CustomObject>
    <label>Solde</label>
    <nameField>
        <label>Nom de Solde</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soldes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>