force-app/main/default/objects/numm__Soldes__c/fields/numm__DateDernierPointage__c.field-meta.xml
<CustomField>
    <fullName>numm__DateDernierPointage__c</fullName>
    <label>Date Dernier Pointage</label>
    <type>Date</type>
</CustomField>