force-app/main/default/objects/numm__Soldes__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <label>Établissement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Establishment__c.numm__Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Soldes</relationshipLabel>
    <relationshipName>Soldes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>