force-app/main/default/objects/numm__Soldes__c/fields/numm__IdThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdThirdParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tiers(Role)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Soldes</relationshipLabel>
    <relationshipName>Soldes</relationshipName>
    <type>Lookup</type>
</CustomField>