force-app/main/default/objects/numm__Soldes__c/fields/numm__Solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Solde__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Solde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>