force-app/main/default/objects/numm__Soldes__c/validationRules/numm__Verification_Entite_Etablissement.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Verification_Entite_Etablissement</fullName>
    <active>true</active>
    <description>Vérification que l&#39;établissement soit un établissement de l&#39;entité renseigné</description>
    <errorConditionFormula>numm__Etablissement__r.numm__Entity__c &lt;&gt;  numm__Entite__c</errorConditionFormula>
    <errorMessage>Etablissement incorrecte. il ne correspond pas à l&#39;entité.</errorMessage>
</ValidationRule>