force-app/main/default/objects/numm__Soldes__c/listViews/numm__SOLDE_NUMM_BNP.listView-meta.xml
<ListView>
    <fullName>numm__SOLDE_NUMM_BNP</fullName>
    <columns>numm__Entite__c</columns>
    <columns>numm__Etablissement__c</columns>
    <columns>numm__DateDernierPointage__c</columns>
    <columns>numm__Solde__c</columns>
    <columns>numm__IdThirdParty__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
    <language>fr</language>
</ListView>